k8s/overlays/prod/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: msg
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session
  namespace: msg
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orghub
  namespace: msg
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenanthub
  namespace: msg
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileman
  namespace: msg
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbman
  namespace: msg
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vectorman
  namespace: msg
spec:
  replicas: 3
